Fixed broken links.
http://bugs.dragonflybsd.org/issues/3161

--- a/nrelease/root/index.html
+++ b/nrelease/root/index.html
@@ -31,8 +31,8 @@ run a BSD environment without having to modify a hard drive.</span></p>
 		</div>
 		<div id="started">
 			<h3><span>How to get started</span></h3>
-			<p class="p1"><span>Install it by following the instructions in <a href="http://www.dragonflybsd.org/docs/newhandbook/Installation/" target="_blank">Installing DragonFlyBSD</a></span></p>
-			<p class="p2"><span>Get familiar with the DragonFly system by reading the <a href="http://www.dragonflybsd.org/docs/newhandbook/" target="_blank">Handbook</a> or the <a href="http://www.dragonflybsd.org/docs/faq/" target="_blank">FAQ</a></span></p>
+			<p class="p1"><span>Install it by following the instructions in <a href="http://www.dragonflybsd.org/docs/handbook/Installation/" target="_blank">Installing DragonFlyBSD</a></span></p>
+			<p class="p2"><span>Get familiar with the DragonFly system by reading the <a href="http://www.dragonflybsd.org/docs/handbook/" target="_blank">Handbook</a> or the <a href="http://www.dragonflybsd.org/docs/faq/" target="_blank">FAQ</a></span></p>
 			<p class="p3"><span>Subscribe to the <a href="http://www.dragonflybsd.org/mailinglists/" target="_blank">Mailing Lists</a> you find relevant.
 These are available on a NNTP server or via regular SMTP mailing lists.
 You can also look at the web-based <a href="http://leaf.dragonflybsd.org/mailarchive/" target="_blank">archive</a></span></p>
@@ -47,7 +47,7 @@ You can also look at the web-based <a href="http://leaf.dragonflybsd.org/mailarc
 				<ul>
 					<li><a href="http://www.dragonflybsd.org/">Official DragonFlyBSD website</a></li>
 					<li><a href="http://www.dragonflydigest.com/">DragonFlyBSD Digest</a></li>
-					<li><a href="http://www.dragonflybsd.org/docs/newhandbook/">DragonFlyBSD Handbook</a></li>
+					<li><a href="http://www.dragonflybsd.org/docs/handbook/">DragonFlyBSD Handbook</a></li>
 					<li><a href="http://leaf.dragonflybsd.org/mailarchive/">Mailing List archive</a></li>
 					<li><a href="http://www.dragonflybsd.org/docs/faq/">FAQ</a></li>
 	                                <li><a href="http://leaf.dragonflybsd.org/cgi/web-man">man pages</a></li>
